--- a/gerrit/files/gerrit.service
+++ b/gerrit/files/gerrit.service
@@ -4,4 +4,6 @@ Description={{service_name}}
 [Service]
 ExecStart={{directory}}/bin/gerrit.sh start
 ExecStop={{directory}}/bin/gerrit.sh stop
+PIDFile={{directory}}/logs/gerrit.pid
+Type=forking
 User={{user}}
